# application/config/routes.php
@@ -64,8 +64,12 @@ $route['api-register'] = 'auth/register';
 
 $route['api-create-transactions'] = 'transaction/dotransac';
 $route['api-categories'] = 'transaction/dogetcategories';
-$route['api-dotransac_checkref'] = 'transaction/dotransac_checkref';
-$route['api-dotransac_postback'] = 'transaction/dotransac_postback';
-$route['api-dotransac_checkstatus'] = 'transaction/dotransac_status';
+$route['api-checkref'] = 'transaction/dotransac_checkref';
+$route['api-postback'] = 'transaction/dotransac_postback';
+$route['api-checkstatus'] = 'transaction/dotransac_status';
 
 
+$route['api-transaction-all']                = 'dashboard/index';
+$route['api-transactions-today']          = 'dashboard/all_transaction_today';
+$route['api-transactions-week']           = 'dashboard/day_count';
+$route['api-transactions-month']          = 'dashboard/month_count';
